# ARC

./: .gitignore  ARC_EFFICIENCY_REPORT.md  CHANGELOG.md  DEPLOYMENT_GUIDE.md  MANIFEST.in  NOTICE  README.md  ablation_results.json  baseline_comparison_results.json  failure_recovery_results.json  false_positive_results.json  modern_models_results.json  organic_failure_results.json  overhead_ablation_results.json  overhead_results.json  pyproject.toml  release.sh  requirements.txt  scientific_benchmark_results.json  setup.py  sota_comparison_results.json  statistical_results.json  torchft_comparison_results.json
.github/workflows/: publish.yml  tests.yml
arc/: __init__.py  config.py
arc/api/: __init__.py  bulletproof.py  callback.py  integrations.py  lite.py  pytorch_callback.py  report.py  v2.py
arc/checkpointing/: __init__.py  adaptive.py
arc/core/: __init__.py  self_healing.py
arc/distributed/: __init__.py  universal.py
arc/evaluation/: __init__.py  benchmark.py  metrics.py
arc/experiments/: __init__.py  (+2 more)
examples/: arc_demo.py  arc_quickstart_tutorial.ipynb  arc_v2_examples.py  failure_detection_demo.py  how_to_use_arc.py  mnist_example.py
experiments/: ablation_experiment.py  ablation_study.py  baseline_comparison.py  benchmark_results.json  comprehensive_benchmark.py  comprehensive_results.json  comprehensive_stress_test.py  crucible_results.json  crucible_test.py  ddp_validation.py  efficiency_benchmark.py  extended_validation.py  extreme_silent_test.py  failure_recovery.py  false_positive_test.py  fast_crucible.py  final_benchmark.py  fp16_stress_test.py  generate_arc_graphs.py  grand_benchmark.py  grand_gpu_benchmark_results.json  imagenet_scale_test.py  imagenet_validation.py  improved_benchmark_results.json  massive_scale_test.py  modern_models_stress_test.py  nightmare_results.json  nightmare_stress_test.py  organic_failure_test.py  overhead_ablation.py  overhead_analysis.py  overhead_measurement.py  prediction_200.py  prediction_200_v2.py  prediction_demo.py  read_report.py  real_data_benchmark.py  rl_stress_test.py  robust_benchmark.py  rollback_stress_test.py  (+16 more)
tests/: stress_test_30seeds.py  test_arc.py  test_checkpoint_security.py  test_comprehensive.py  test_conformal_invalidation.py  test_self_healing.py
(+55 files in other folders)
