[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arc-training"
version = "4.0.0"
description = "Automatic Recovery Controller - Auto-detect and recover from neural network training failures"
readme = "README.md"
license = {text = "AGPL-3.0-or-later"}
authors = [
    {name = "Aryan Kaushik", email = "a.kaushik0908@gmail.com"}
]
keywords = [
    "deep-learning",
    "pytorch",
    "training",
    "fault-tolerance",
    "nan-recovery",
    "checkpointing",
    "machine-learning",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "torch>=1.9.0",
    "numpy>=1.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "isort>=5.0",
    "mypy>=0.900",
]
lightning = [
    "pytorch-lightning>=1.5.0",
]
full = [
    "scipy>=1.7.0",
    "tqdm>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/aryankaushik/arc-training"
Documentation = "https://arc-training.readthedocs.io"
Repository = "https://github.com/aryankaushik/arc-training"
Changelog = "https://github.com/aryankaushik/arc-training/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["arc*"]

[tool.setuptools.package-data]
arc = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
